--- a/jetbrains/.ideavimrc
+++ b/jetbrains/.ideavimrc
@@ -35,5 +35,13 @@ map <Leader>y :action EditorDeleteLine<CR>
 map <leader>[ :action EditorCodeBlockStart<CR>
 map <leader>] :action EditorCodeBlockEnd<CR>
 
+" e.g:/home/repository/src/bar/foo.txt
+nnoremap <leader>yP :action CopyAbsolutePath<CR>
+" e.g:/home/repository/src/bar/foo.txt:46
+nnoremap <leader>ypn :action CopyPathWithLineNumber<CR>
+" e.g:src/bar/foo.txt
+nnoremap <leader>ypr :action CopyPathFromRepositoryRootProvider<CR>
+" e.g:bar/foo.txt
+nnoremap <leader>yps :action CopySourceRootPath<CR>
 imap <C-v> <ESC>:action $Paste<CR>
 
