fix wrong leader in ideavimrc

--- a/jetbrains/.ideavimrc
+++ b/jetbrains/.ideavimrc
@@ -6,7 +6,7 @@ set relativenumber
 set number
 set scrolloff=5
 
-let leader = " "
+let mapleader = " "
 map <Leader>a :action $SelectAll<CR>
 map <Leader>b :action BreakpointActionsGroup<CR>
 map <Leader>c :action $Copy<CR>
