change binding for <leader>s to NewScratchFile in .ideavimrc

--- a/jetbrains/.ideavimrc
+++ b/jetbrains/.ideavimrc
@@ -28,7 +28,7 @@ map <Leader>p :action ParameterInfo<CR>
 map <Leader>q :action QuickJavaDoc<CR>
 map <Leader>r :action Refactorings.QuickListPopupAction<CR>
 map <Leader>R :action Replace<CR>
-map <Leader>s :action context.save<CR>
+map <Leader>s :action NewScratchFile<CR>
 map <Leader>t :action task.actions<CR>
 map <Leader>u :action GotoSuperMethod<CR>
 map <Leader>v :action $Paste<CR>
