--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -4,6 +4,7 @@
 
 [core]
     pager = delta
+    editor = vim
 
 [interactive]
     diffFilter = delta --color-only
@@ -17,3 +18,5 @@
 
 [diff]
     colorMoved = default
+[push]
+    autoSetupRemote = true
