--- a/jetbrains/.ideavimrc
+++ b/jetbrains/.ideavimrc
@@ -6,6 +6,7 @@ set relativenumber
 set number
 set scrolloff=3
 set clipboard+=unnamed
+set belloff=all
 
 let mapleader = " "
 map <Leader>a :action $SelectAll<CR>
