--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -3,22 +3,22 @@ set -g prefix C-a
 unbind C-b
 bind C-a send-prefix
 
-# Enable mouse support
 set -g mouse on
 set -g mode-keys vi
+set -g terminal-overrides ",xterm-256color:Tc"
 
-# Split panes using | and -
 bind | split-window -h
 bind - split-window -v
 bind-key -T copy-mode-vi 'v' send -X begin-selection
 bind-key -T copy-mode-vi 'C-v' send -X rectangle-toggle
 bind-key -T copy-mode-vi 'y' send -X copy-selection
 
-# Toggle pane synchronization
 bind S setw synchronize-panes
-
-# Reload tmux configuration
 bind r source-file ~/.tmux.conf \; display "Config reloaded!"
 
-# Set status bar to show time and date
-set -g status-right '#(date "+%Y-%m-%d %H:%M:%S")'
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'jimeh/tmux-themepack'
+set -g @themepack 'powerline/double/yellow'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
