--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -6,6 +6,7 @@ bind C-a send-prefix
 set -g mouse on
 set -g mode-keys vi
 set -g terminal-overrides ",xterm-256color:Tc"
+set-option -g status-position top
 
 bind | split-window -h
 bind - split-window -v
