--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -7,6 +7,7 @@ set -g mouse on
 set -g mode-keys vi
 set -g terminal-overrides ",xterm-256color:Tc"
 set-option -g status-position top
+set-option -g history-limit 100000
 
 bind | split-window -h
 bind - split-window -v
@@ -18,6 +19,7 @@ bind S setw synchronize-panes
 bind r source-file ~/.tmux.conf \; display "Config reloaded!"
 
 set -g @plugin 'tmux-plugins/tpm'
+
 set -g @plugin 'jimeh/tmux-themepack'
 set -g @themepack 'powerline/double/yellow'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
