--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -11,7 +11,10 @@
 
 [delta]
     navigate = true    # use n and N to move between diff sections
-    light = false      # set to true if you're in a terminal w/ a light background color (e.g. the default macOS terminal)
+    side-by-side = true
+    line-numbers = true
+    syntax-theme = gruvbox-dark
+    light = false      # set to true if you're in a terminal w/ a light background color
 
 [merge]
     conflictstyle = diff3
