--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -14,6 +14,7 @@
     side-by-side = true
     line-numbers = true
     syntax-theme = gruvbox-dark
+    ; syntax-theme = "Catppuccin-mocha"
     light = false      # set to true if you're in a terminal w/ a light background color
 
 [merge]
