add new configs to .gitignore

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -3,6 +3,8 @@
     email = 26289307+Mustapha-Belkacim@users.noreply.github.com
 
 [core]
+	untrackedCache = true
+	fsmonitor = true
     pager = delta
     editor = nvim
 
@@ -13,18 +15,45 @@
     navigate = true    # use n and N to move between diff sections
     side-by-side = true
     line-numbers = true
+    hyperlinks = true
     syntax-theme = gruvbox-dark
     ; syntax-theme = "Catppuccin-mocha"
     light = false      # set to true if you're in a terminal w/ a light background color
 
-[merge]
-    conflictstyle = diff3
-
 [diff]
     colorMoved = default
+    algorithm = histogram
+
+[commit]
+    verbose = true
+
+[transfer]
+    fsckObjects = true
+
+[fetch]
+	writeCommitGraph = true
+
+[merge]
+    conflictstyle = zdiff3
+
+[rebase]
+	instructionFormat = (%an <%ae>) %s
+    autosquash = true
+
+[rerere]
+    enabled = true
 
 [push]
     autoSetupRemote = true
 
+[pull]
+    rebase = true
+
 [init]
    defaultBranch = main
+
+[help]
+    autocorrect = 10
+
+[color]
+    ui = true
