--- a/config/.config/Code/User/settings.json
+++ b/config/.config/Code/User/settings.json
@@ -3,6 +3,13 @@
   "workbench.colorTheme": "Catppuccin Macchiato",
   "github.copilot.nextEditSuggestions.enabled": true,
   "editor.fontSize": 14,
+  // "editor.fontFamily": "Hack Nerd Font Mono",
+  "editor.fontFamily": "Fira Code",
+  "editor.fontLigatures": true,
+  "editor.formatOnPaste": true,
+  "editor.insertSpaces": true,
+  "editor.renderWhitespace": "trailing",
+  "editor.rulers": [100],
   "extensions.experimental.affinity": {
       "asvetliakov.vscode-neovim": 1
   },
